# rules_qt6

./: .gitignore  AGENTS.md  MODULE.bazel  README.md
extension/: download_qt.bzl  qt_modules.bzl
extension/qt/6.8.3/: linux_x86_64.BUILD  mac_aarch64.BUILD  qt_libraries.bzl  windows_x86_64.BUILD
tests/: MODULE.bazel
tests/qml_hello/: BUILD.bazel  main.cpp  main.qml
